--- a/angular01/package.json
+++ b/angular01/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.7.0",
     "pg": "^6.0.0",
     "serve-favicon": "~2.3.0",
-    "stylus": "0.54.5"
+    "stylus": "0.54.5",
+    "xss": "^0.2.13"
   }
 }
