버그수정, angular는 xss 필요없는듯.. xss filter 제거

--- a/angular01/package.json
+++ b/angular01/package.json
@@ -18,7 +18,6 @@
     "morgan": "~1.7.0",
     "pg": "^6.0.0",
     "serve-favicon": "~2.3.0",
-    "stylus": "0.54.5",
-    "xss": "^0.2.13"
+    "stylus": "0.54.5"
   }
 }
